--- a/app/src/main/res/layout/activity_group_home.xml
+++ b/app/src/main/res/layout/activity_group_home.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text=""
         android:id="@+id/groupNameHeader"
         android:layout_gravity="center_horizontal"
         android:paddingTop="20dp"
@@ -20,12 +21,13 @@
         android:text="Number of Members in Library:"
         android:id="@+id/numMemHeader"
         android:layout_gravity="center_horizontal"
-        android:padding="25dp"
+        android:paddingTop="25dp"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/textView2"
         android:layout_gravity="center_horizontal"
