--- a/app/src/main/res/layout/activity_group_questions.xml
+++ b/app/src/main/res/layout/activity_group_questions.xml
@@ -1,19 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="edu.pitt.cs.cs1635.studybuddies.MainActivity">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:textSize="24dp"
         android:text="Questions"
-        android:gravity="center"/>
-    <ListView
+        android:gravity="center_horizontal"
+        />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
-        android:id="@+id/Question_list"
-        android:theme="@android:style/Theme.WithActionBar">
-    </ListView>
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:focusableInTouchMode="true">
+
+        <ImageView
+            android:id="@+id/search_icon"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_action_search"/>
+        <EditText
+            android:id="@+id/search"
+            android:inputType="text"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:imeOptions="actionDone"/>
+        <ImageButton
+            android:id="@+id/add_group_button"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_action_new"
+            android:onClick="addQuestion"
+            android:background="#00FFFFFF"/>
+    </LinearLayout>
+
+
+    <ScrollView
+        android:id="@+id/group_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8">
+
+        <LinearLayout
+            android:id="@+id/question_list"
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"/>
+
+    </ScrollView>
+
 </LinearLayout>
