--- a/app/src/main/res/layout/activity_study_group_home.xml
+++ b/app/src/main/res/layout/activity_study_group_home.xml
@@ -43,13 +43,14 @@
         android:layout_height="wrap_content"
         android:imeOptions="actionDone"
         android:inputType="text"
+        android:layout_gravity="center"
         android:text="Type message here..." />
 
     <Button
         android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
+        android:layout_gravity="center"
         android:layout_margin="10dp"
         android:padding="25dp"
         android:text="Submit" />
