add and remove groups to favorites

--- a/app/src/main/res/layout/activity_group_home.xml
+++ b/app/src/main/res/layout/activity_group_home.xml
@@ -14,6 +14,16 @@
         android:paddingTop="20dp"
         />
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/favorite_indicator"
+        android:src="@drawable/ic_favorite_border_black_24dp"
+        android:background="#0000"
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:clickable="true"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,7 +31,7 @@
         android:text="Number of Members in Library:"
         android:id="@+id/numMemHeader"
         android:layout_gravity="center_horizontal"
-        android:paddingTop="25dp"
+        android:paddingTop="10dp"
         />
 
     <TextView
@@ -52,8 +62,7 @@
         android:padding="25dp"
         android:layout_margin="10dp"
         />
-
-
+    
     <Button
         android:layout_width="225dp"
         android:layout_height="95dp"
