--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:layout_marginBottom="10dp"
         android:text="Create a group"
         android:gravity="center_horizontal"
