--- a/app/src/main/res/layout/activity_create_study_group.xml
+++ b/app/src/main/res/layout/activity_create_study_group.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,51 +8,105 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
         android:layout_marginBottom="10dp"
-        android:text="Create a study group"
         android:gravity="center_horizontal"
-        />
+        android:text="Create a study group"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/subjectText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:text="Subject:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:text="Subject:" />
+
         <EditText
             android:id="@+id/subject"
-            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:hint="Enter subject"
             android:imeOptions="actionDone"
-            android:hint="Enter subject"/>
+            android:inputType="text" />
+
+        <TextView
+            android:layout_marginTop="16dp"
+            android:id="@+id/loacationText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:text="Location:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:text="Location:" />
+
         <EditText
             android:id="@+id/location"
-            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:hint="Enter a location"
             android:imeOptions="actionDone"
-            android:hint="Enter a location"/>
-        <EditText
-            android:id="@+id/time"
-            android:inputType="text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:imeOptions="actionDone"
-            android:hint="Enter start time"/>
-        <EditText
-            android:id="@+id/length"
-            android:inputType="text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:imeOptions="actionDone"
-            android:hint="Enter duration"/>
-
+            android:inputType="text" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/timeText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:text="Start Time:"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:text="Start Time:" />
+
+            <TimePicker
+                android:id="@+id/time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:timePickerMode="spinner" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">>
+
+            <TextView
+                android:id="@+id/durationText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:text="Duration:"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:text="Duration:" />
+
+            <NumberPicker
+                android:id="@+id/length"
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4">
+
+            </NumberPicker>
+        </LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
