--- a/app/src/main/res/layout/rank_dialog.xml
+++ b/app/src/main/res/layout/rank_dialog.xml
@@ -1,22 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="2dip">
-
-    <TextView android:text="Doctor's Name" android:id="@+id/rank_dialog_text1"
-        android:textSize="24dp" android:layout_marginTop="10dp"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+    android:weightSum="1">
 
     <RatingBar
-        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:id="@+id/dialog_ratingbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+
+        android:layout_marginTop="10dp"
         android:clickable="true"
-        android:id="@+id/dialog_ratingbar" android:layout_gravity="center"
-        android:numStars="5" android:stepSize="1.0" android:rating="2"
-        android:isIndicator="false"/>
+        android:isIndicator="false"
+        android:numStars="5"
+        android:rating="2"
+        android:stepSize="1.0" />
+
+    <ScrollView
+        android:id="@+id/SCROLLER_ID"
+        android:layout_width="fill_parent"
+        android:layout_height="150dp"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
+
+        <TextView
+            android:id="@+id/rank_dialog_text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="0dp"
+            android:fadeScrollbars="true"
+            android:text="Doctor's Name"
+            android:textSize="24dp" />
+    </ScrollView>
 
     <Button android:id="@+id/rank_dialog_button"
         android:layout_height="wrap_content"
