--- a/app/src/main/res/menu/navbar.xml
+++ b/app/src/main/res/menu/navbar.xml
@@ -2,11 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:compat="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/home_button"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_action_home"
         android:title="Home"
+        android:tint="@color/white"
         compat:showAsAction="ifRoom"/>
     <item android:id="@+id/fav_button"
-        android:icon="@drawable/ic_favorite_black_24dp"
+        android:icon="@drawable/heart"
         android:title="Favorite"
+        android:color="@color/white"
         compat:showAsAction="ifRoom" />
 </menu>
