--- a/app/src/main/res/layout/activity_answered_questions.xml
+++ b/app/src/main/res/layout/activity_answered_questions.xml
@@ -18,6 +18,7 @@
         android:layout_weight="1"
         android:textSize="24dp"
         android:text="Questions"
+        android:textColor="@color/text_color"
         android:gravity="center_horizontal"
         />
 
@@ -40,7 +41,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:imeOptions="actionDone"/>
+            android:imeOptions="actionDone"
+            android:textColor="@color/text_color"/>
     </LinearLayout>
 
 
