--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -8,11 +8,14 @@
         android:layout_weight="1"
         android:textSize="24dp"
         android:text="Favorites"
+        android:textColor="@color/text_color"
         android:gravity="center"/>
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="9"
+        android:textColor="@color/text_color"
+        android:color = "@color/text_color"
         android:id="@+id/favorite_list"
         android:theme="@android:style/Theme.WithActionBar">
     </ListView>
