--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/username"
+        android:textColor="@color/text_color"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:textSize="20dp"
@@ -25,6 +26,7 @@
         android:layout_weight="1"
         android:textSize="24dp"
         android:text="Groups"
+        android:textColor="@color/text_color"
         android:gravity="center_horizontal"
         />
 
@@ -33,30 +35,32 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/search_icon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_action_search"/>
+            android:src="@drawable/ic_action_search" />
+
         <EditText
             android:id="@+id/search"
-            android:inputType="text"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:imeOptions="actionDone"/>
+            android:imeOptions="actionDone"
+            android:inputType="text" />
+
         <ImageButton
             android:id="@+id/add_group_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_action_new"
+            android:background="#00FFFFFF"
             android:onClick="addGroup"
-            android:background="#00FFFFFF"/>
+            android:src="@drawable/ic_action_new" />
     </LinearLayout>
 
 
