--- a/app/src/main/res/layout/activity_study_group_home.xml
+++ b/app/src/main/res/layout/activity_study_group_home.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_color"
         android:paddingTop="20dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -19,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:paddingTop="20dp"
+        android:textColor="@color/text_color"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -27,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:paddingBottom="20dp"
+        android:textColor="@color/text_color"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -34,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
+        android:textColor="@color/text_color"
         android:paddingBottom="200dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
