--- a/app/src/main/res/layout/activity_study_group_list.xml
+++ b/app/src/main/res/layout/activity_study_group_list.xml
@@ -18,6 +18,7 @@
         android:layout_weight="1"
         android:textSize="24dp"
         android:text="Study Groups"
+        android:textColor="@color/text_color"
         android:gravity="center_horizontal"
         />
 
