--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#D4AF37</color>
     <color name="white">#FFFFFF</color>
+    <color name="button_color">#3F51B5</color>
+    <color name="text_color">#000000</color>
 </resources>
