--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -11,6 +11,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:layout_marginBottom="10dp"
         android:text="Create a group"
+        android:textColor="@color/text_color"
         android:gravity="center_horizontal"
         />
 
@@ -18,6 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/group_name_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:text="Group name:"
+            android:textColor="@color/text_color"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            />
         <EditText
             android:id="@+id/group_name"
             android:inputType="text"
@@ -26,6 +36,15 @@
             android:layout_weight="4"
             android:imeOptions="actionDone"
             android:hint="Enter group name"/>
+        <TextView
+            android:id="@+id/professor_name_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:text="Professor's name:"
+            android:textColor="@color/text_color"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+             />
         <EditText
             android:id="@+id/professor_name"
             android:inputType="text"
