--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#d4af37</color>
+    <color name="colorAccent">#D4AF37</color>
+    <color name="white">#FFFFFF</color>
+    <color name="button_color">#3F51B5</color>
+    <color name="text_color">#000000</color>
 </resources>
