--- a/app/src/main/res/layout/activity_study_group_home.xml
+++ b/app/src/main/res/layout/activity_study_group_home.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
         android:imeOptions="actionDone"
         android:inputType="text"
+        android:backgroundTint="@color/colorAccent"
         android:layout_gravity="center"
         android:text="Type message here..." />
 
