--- a/app/src/main/res/layout/activity_answer_question.xml
+++ b/app/src/main/res/layout/activity_answer_question.xml
@@ -31,6 +31,7 @@
             android:layout_height="10dp"
             android:layout_weight="1.95"
             android:typeface="normal"
+            android:backgroundTint="@color/colorAccent"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             tools:textColor="@android:color/black"
             android:textColor="@color/text_color"/>
