--- a/app/src/main/res/layout/activity_answered_questions.xml
+++ b/app/src/main/res/layout/activity_answered_questions.xml
@@ -42,6 +42,7 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:imeOptions="actionDone"
+            android:backgroundTint="@color/colorAccent"
             android:textColor="@color/text_color"/>
     </LinearLayout>
 
