--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -10,7 +10,7 @@
         android:textSize="24dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:layout_marginBottom="10dp"
-        android:text="Create a group"
+        android:text="Create a class"
         android:textColor="@color/text_color"
         android:gravity="center_horizontal"
         />
@@ -24,18 +24,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:text="Group name:"
+            android:text="Class name:"
             android:textColor="@color/text_color"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             />
         <EditText
             android:id="@+id/group_name"
             android:inputType="text"
+            android:backgroundTint="@color/colorAccent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:imeOptions="actionDone"
-            android:hint="Enter group name"/>
+            android:hint="Enter class name"/>
         <TextView
             android:id="@+id/professor_name_text"
             android:layout_width="match_parent"
@@ -51,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:backgroundTint="@color/colorAccent"
             android:imeOptions="actionDone"
             android:hint="Enter professor's name"/>
 
