--- a/app/src/main/res/layout/activity_create_study_group.xml
+++ b/app/src/main/res/layout/activity_create_study_group.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:backgroundTint="@color/colorAccent"
             android:hint="Enter subject"
             android:imeOptions="actionDone"
             android:inputType="text" />
@@ -54,6 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:backgroundTint="@color/colorAccent"
             android:hint="Enter a location"
             android:imeOptions="actionDone"
             android:inputType="text" />
