--- a/app/src/main/res/layout/activity_group_questions.xml
+++ b/app/src/main/res/layout/activity_group_questions.xml
@@ -37,6 +37,7 @@
             android:src="@drawable/ic_action_search"/>
         <EditText
             android:id="@+id/search"
+            android:backgroundTint="@color/colorAccent"
             android:inputType="text"
             android:layout_width="0dp"
             android:layout_height="match_parent"
