--- a/app/src/main/res/layout/activity_view_answers.xml
+++ b/app/src/main/res/layout/activity_view_answers.xml
@@ -8,18 +8,18 @@
     <ScrollView
         android:id="@+id/SCROLLER_ID"
         android:layout_width="fill_parent"
-        android:layout_height="83dp"
-        android:scrollbars="vertical"
-        android:fillViewport="true">
+        android:layout_height="120dp"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
 
         <TextView
             android:id="@+id/TEXT_STATUS_ID"
             android:layout_width="match_parent"
-            android:layout_height="13dp"
+            android:layout_height="26dp"
             android:layout_weight="0.60"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/text_color"
             android:typeface="normal"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             tools:textColor="@android:color/black" />
 
     </ScrollView>
@@ -28,13 +28,14 @@
         android:id="@+id/group_scroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8">
+        android:layout_weight="7.00">
 
         <LinearLayout
             android:id="@+id/answer_list"
-            android:orientation="vertical"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical" />
 
     </ScrollView>
 
