--- a/app/src/main/res/layout/rank_dialog.xml
+++ b/app/src/main/res/layout/rank_dialog.xml
@@ -3,18 +3,27 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/colorPrimary"
     android:padding="2dip">
+    <ScrollView
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/group_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7.00">
 
     <TextView android:text="Doctor's Name" android:id="@+id/rank_dialog_text1"
-        android:textSize="24dp" android:layout_marginTop="10dp"
+        android:textSize="26dp"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="top"/>
+    </ScrollView>
 
     <RatingBar
         android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:clickable="true"
         android:id="@+id/dialog_ratingbar" android:layout_gravity="center"
+        android:progressTint="@color/colorAccent"
         android:numStars="5" android:stepSize="1.0" android:rating="2"
         android:isIndicator="false"/>
 
